--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="qunit.js"></script>
 
+  <script type="text/javascript">exports = {};</script>
   <script type="text/javascript" src="../lib/calendar.js"></script>
   <script type="text/javascript" src="calendar_tests.js"></script>
 
