--- a/test/doctest.html
+++ b/test/doctest.html
@@ -29,7 +29,7 @@ are used to fill the first and last weeks as needed.
 
 <pre class="doctest">
 $ cal = new Calendar(1);               // weeks starting on Monday
-$ cal.monthDays(2012, 1);              // February is 1 in JavaScript Date API
+$ cal.monthDays(2012, 2);
 [
   [0, 0, 1, 2, 3, 4, 5],
   [6, 7, 8, 9, 10, 11, 12],
@@ -55,8 +55,8 @@ month.
 
 <pre class="doctest">
 $ cal = new Calendar();               // weeks start on Sunday by default
-$ m = cal.monthDates(2012,0,          // January is 0 in JavaScript Date API
->       function(d) {return (' '+d.getDate()).slice(-2)}, 
+$ m = cal.monthDates(2012,1,
+>       function(d) {return (' '+d.getDate()).slice(-2)},
 >       function(w) {return w.join(' | ')}
 > );
 > for (i=0; i&lt;m.length; i++) writeln(m[i]);
